--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -1,11 +1,12 @@
 /* Sayfanın ortalanması */
 .content {
   height: 100vh;
+  user-select: none;
 }
 /* Memory Game konteynerı */
 .memory-game {
   text-align: center;
-  padding: 20px;
+  padding: 10px;
   border-radius: 10px;
 }
 
@@ -22,11 +23,9 @@
   width: 900px;
   height: 900px;
   height: auto;
-  background-color: brown;
   margin: 0 auto;
-  border: 2px solid #ccc;
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px;
 }
 
 /* Kartların sıralanacağı satır */
