--- a/src/components/gameBar.css
+++ b/src/components/gameBar.css
@@ -1,17 +1,15 @@
 .gamebar-container {
   width: 20%;
-  height: 100vh;
-  background-color: #f5f5f5;
-  margin: 5px;
+  padding: 10px;
+  user-select: none;
 }
 .gamebar {
   height: 100%;
   border-radius: 10px;
-  padding: 15px;
-  background-color: blueviolet;
+  border: 2px solid #f1f1f1;
+  background-color: #f5f5f5;
 }
 .player-content {
-  margin-top: 1rem;
   display: flex;
   justify-content: space-between;
   padding: 20px;
@@ -35,6 +33,13 @@
   margin: 3px;
   border-radius: 3px;
   border-bottom: 2px solid #ccc;
+  font-size: 18px;
+}
+.player-moves {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  width: 100%;
 }
 .gamebar-item-left-side {
   width: 40%;
@@ -45,4 +50,49 @@
   width: 60%;
   display: flex;
   justify-content: end;
+}
+.gamebar-list-item {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  padding: 4px;
+  margin: 3px;
+  border-radius: 3px;
+  border-bottom: 1px solid #ccc;
+  font-size: 18px;
+}
+.gamebar-list-item-left-side {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+}
+.gamebar--list-item-score {
+  width: 40%;
+}
+.gamebar-list-item-name {
+  width: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.gamebar-list-item-time {
+  display: flex;
+  justify-content: center;
+  width: 40%;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 40px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
