--- a/src/components/registerPage.css
+++ b/src/components/registerPage.css
@@ -3,12 +3,13 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  user-select: none;
 }
 .register-container {
   display: flex;
   justify-content: center;
   text-align: center;
-  margin-top: 10rem;
+  margin-top: 8rem;
   align-items: center;
   width: 30%;
   height: 300px;
