--- a/src/pages/resultPage.css
+++ b/src/pages/resultPage.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  user-select: none;
 }
 .result-page-content {
   margin-top: 10rem;
