--- a/src/components/gameBar.css
+++ b/src/components/gameBar.css
@@ -49,7 +49,8 @@
 .gamebar-item-time {
   width: 60%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
+  margin-right: 20px;
 }
 .gamebar-list-item {
   display: flex;
