--- a/src/components/GameBoard.css
+++ b/src/components/GameBoard.css
@@ -5,7 +5,7 @@
 
 .memory-game {
   text-align: center;
-  padding: 10px;
+  padding: 5px 20px;
   border-radius: 10px;
 }
 
@@ -27,18 +27,24 @@
 
 .memory-game-board-row {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(8, 0.5fr);
   justify-content: center;
   width: 100%;
   margin-bottom: 10px;
 }
 
 .loading {
+  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 60vh;
-  width: 100%;
+  align-content: center;
+  text-align: center;
+  height: 730px;
+  width: 900px;
   font-size: 25px;
   font-weight: bold;
+  position: absolute;
+  z-index: 5;
+  background-color: #f5f5f5;
 }
