--- a/src/pages/registerPage.css
+++ b/src/pages/registerPage.css
@@ -10,7 +10,6 @@
   justify-content: center;
   text-align: center;
   margin-top: 8rem;
-  align-items: center;
   width: 30%;
   height: 300px;
   border: 2px solid #f1f1f1;
@@ -20,9 +19,10 @@
 }
 .register-content {
   display: flex;
+  margin-top: 2rem;
   width: 60%;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
